# Portfolio

./: .gitignore  LICENSE  README.md
Bioinformatics/BCR_Repertoire/: .gitignore  Makefile  README.md
Bioinformatics/B_cell_repertoire_analysis/: Tipton_2015_analysis_part1.Rmd  Tipton_2015_analysis_part1.md  Tipton_2015_analysis_part2.Rmd  Tipton_2015_analysis_part2.md
Bioinformatics/Microbial_Strain_Analysis/: README.md  main.py  pyproject.toml
Bioinformatics/Microbial_Strain_Analysis/app/: streamlit_app.py
Bioinformatics/Microbial_Strain_Analysis/report/: _quarto.yml  eda_report.qmd
Bioinformatics/Microbial_Strain_Analysis/report/scripts/: s01_dataset_overview.py  s02_data_quality.py  s03_taxonomy.py  s03b_taxonomy_treemap.py  s03c_o2_phylum_heatmap.py  s04_growth_params.py  s04b_correlation.py  s05_media_compounds.py  s06_findings.py  setup.py
Bioinformatics/Microbial_Strain_Analysis/scripts/: prepare_data.py
Bioinformatics/Microbial_Strain_Analysis/src/microbial/analysis/: stats.py
Bioinformatics/Microbial_Strain_Analysis/src/microbial/viz/: plots.py
Bioinformatics/R_basics_tutorial/: Dockerfile  README.md  (+1 more)
Bioinformatics/matplotlib_figures/: Containerfile  README.md  pyproject.toml
Bioinformatics/matplotlib_figures/reports/: publication_ready_figures.qmd
Bioinformatics/matplotlib_figures/scripts/: generate_figures.py
Data_Science/Bioinformatics_Job_Market_Analysis/: README.md  pyproject.toml  report.html  report.qmd
Data_Science/Bioinformatics_Job_Market_Analysis/src/: job_analysis_bioinformatic.py
Data_Science/CIBMTR_HCT/: README.md  main.py  pyproject.toml  report.qmd
Data_Science/CIBMTR_HCT/aws/: config.yaml  run.sh
Data_Science/CIBMTR_HCT/containers/nn/: Dockerfile  requirements.txt  train_nn.py
Data_Science/CIBMTR_HCT/kaggle_submission/notebook/: notebook.ipynb
Data_Science/CIBMTR_HCT/src/: config.py  eda.py  ensemble.py  features.py  metrics.py  run_pipeline.py  save_models.py  train.py
Data_Science/NYC_Airbnb/: README.md  nyc-airbnb-eda-visualization-regression.ipynb  pyproject.toml  report.qmd
Data_Science/NYC_Airbnb/src/: config.py  eda.py  features.py  run_pipeline.py  train.py
Data_Science/PhD_Stipends/: README.md  main.py  pyproject.toml  report.html  report.qmd
Data_Science/Python_basics_tutorial/: Containerfile  pyproject.toml  run.sh
Data_Science/Python_basics_tutorial/output/: python_basics_tutorial.html
Data_Science/Python_basics_tutorial/reports/: python_basics_tutorial.qmd
Data_Science/Stroke_Risk_Factors/: .gitignore  ASSIGNMENT.md  Containerfile  README.md  SMOTE_LIMITATIONS.md  pyproject.toml  report.qmd
Publications/: README.md
kaggle/: automl-premium.ipynb  beta-lactamase-001-data-wrangling-and-eda.ipynb  beta-lactamase-002-classification-model.ipynb  beta-lactamase-003-classification-pipeline.ipynb  beta-lactamase-004-rf-grid-search-f1-0-40.ipynb  cibmtr-imports.ipynb  create-a-synthetic-dataset-with-signal.ipynb  creating-a-knowledge-base-free-models.ipynb  creating-a-knowledge-base-paid-models.ipynb  depression-prediction-with-catboost-optuna.ipynb  diabete-prediction-optuna-autogluon.ipynb  download-documents-form-the-internet-archive.ipynb  eda-langchain-autogluon.ipynb  eda-langchain-feature-engineering-autogluon.ipynb  epa-air-quality-analysis-dgso-2020.ipynb  how-to-experiment-with-free-models.ipynb  jane-street-real-time-market-data-forecasting.ipynb  llm-automated-eda-and-baseline.ipynb  neo-bank-churn-xgboost.ipynb  nfl-big-data-bowl-2025-sweetviz-langchain.ipynb  nyc-airbnb-eda-visualization-regression.ipynb  op2-genes-ontology-analysis.ipynb  op2-smiles-and-gene-ontology-encoding-xgboost.ipynb  op2-xgboost-optuna.ipynb  ph-d-stipends-by-research-topic-and-universities.ipynb  predicting-depression-with-llm-and-automl.ipynb  predicting-heart-disease-risk-with-random-forest.ipynb  ps-s5-e01-autogluon.ipynb  ps4e11-catboost-xgboost-lightgbm.ipynb  ps4e11-explore-best-models.ipynb  python-for-mathematics-permutations.ipynb  python-for-mathematics.ipynb  rag-llm-openai-vector-stores.ipynb  sales-forecasting-with-llm-lgbm-lr.ipynb  sentiment-analysis-from-a14-road-users-comments.ipynb  simple-baseline-model.ipynb  spaceship-titanic-eda-scikit-learn.ipynb  starter-eda-modeling-template-notebook.ipynb  starter-eda-modeling.ipynb  stroke-prevention-clustering-and-risks-factors.Rmd  (+3 more)
(+122 files in other folders)
