[project]
name = "microbial-strain-analysis"
version = "0.1.0"
description = "Bioinformatics analysis of bacterial strain growth parameters and media preferences"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.29.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]

[project.scripts]
prepare-data = "microbial.data.preprocessor:get_data"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microbial"]
