[project]
name = "cibmtr-hct"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.67",
    "catboost>=1.2.10",
    "iterative-stratification>=0.1.9",
    "jupyter>=1.1.1",
    "lifelines>=0.30.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
