[project]
name = "python-basics-tutorial"
version = "0.1.0"
description = "Python basics tutorial for data science and bioinformatics"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "openpyxl>=3.1",
    "palmerpenguins>=0.1",
    "pyyaml>=6.0.3",
    "nbformat>=5.10.4",
    "nbclient>=0.10.4",
    "jupyter-core>=5.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
]
